Fiz um footer que eu achei que precisava

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
         </div>
    </main>
    <footer>
-       <!-- Adicione conteúdo aqui -->
-   </footer> 
+    <div class="back-footer">
+        <section>
+            <h4>Desafio Alunos Vai na Web - Módulo 1</h4>
+        </section>
+    </div>
+   </footer>
 </body>
 </html>
